--- a/input.html
+++ b/input.html
@@ -157,6 +157,53 @@
 				</div>
 			</div>
 		</div>
+		<div class="weui-cells__title">选择</div>
+		<div class="weui-cells">
+			<div class="weui-cell weui-cell_select weui-cell_select-before">
+				<div class="weui-cell__hd">
+					<select name="select2" id="" class="weui-select">
+						<option value="1">+86</option>
+						<option value="2">+87</option>
+						<option value="3">+88</option>
+					</select>
+				</div>
+				<div class="weui-cell__bd">
+					<input type="number" class="weui-input" pattern="[0-9]*" placeholder="请输入手机号码">
+				</div>
+			</div>
+		</div>
+		<div class="weui-cells__title">选择</div>
+		<div class="weui-cells">
+			<div class="weui-cell weui-cell_select">
+				<div class="weui-cell__bd">
+					<select name="select1" id="" class="weui-select">
+						<option value="1">QQ</option>
+						<option value="2" selected>微信</option>
+						<option value="3">微博</option>
+						<option value="4">叮叮</option>
+					</select>
+				</div>
+			</div>
+			<div class="weui-cell weui-cell_select weui-cell_select-after">
+				<div class="weui-cell__hd">
+					<label for="" class="weui-label">国家/地区</label>
+				</div>
+				<div class="weui-cell__bd">
+					<select name="" id="" class="weui-select">
+						<option value="1">中国</option>
+						<option value="2" selected>美国</option>
+						<option value="3">英国</option>
+					</select>
+				</div>
+			</div>
+		</div>
+		<label for="weuiAgree" class="weui-agree">
+			<input type="checkbox" class="weui-agree__checkbox">
+			<span class="weui-agree__text">阅读并同意<a href="javascript:;"><<相关条款>></a></span>
+		</label>
+		<div class="weui-btn-area">
+			<a href="javascript:;" class="weui-btn weui-btn_primary" id="showTooltips">确定</a>
+		</div>
 	</div>
 </body>
 </html>
